--- a/contact.html
+++ b/contact.html
@@ -39,12 +39,12 @@
                     <div class="navbar-collapse collapse">                          
                         <div class="menu">
                             <ul class="nav nav-tabs" role="tablist">
-                                <li role="presentation"><a href="index.html" class="active">Home</a></li>
+                                <li role="presentation"><a href="index.html" >Home</a></li>
                                 <li role="presentation"><a href="about.html" >About Us</a></li>
                                                              
                                 <li role="presentation"><a href="brand.html">Our Brands</a></li>
                                 <li role="presentation"><a href="product.html">Our Products</a></li>
-                                <li role="presentation"><a href="contact.html">Contact</a></li>                     
+                                <li role="presentation"><a href="contact.html" class="active">Contact</a></li>                     
                             </ul>
                         </div>
                     </div>                      
