--- a/about.html
+++ b/about.html
@@ -4,6 +4,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+       
+  <meta name="description" content="Elista Overseas Shoes Footwear Flat heel pencil monk lace up sandal sporty ankle boot slip on belli bellirius high heels Export Retail Buy Sell Company India ">
+  <meta name="keywords" content="Elista Overseas Shoes Footwear Flat heel pencil monk lace up sandal sporty ankle boot slip on belli bellirius high heels Export Retail Buy Sell Company India ">
+  <meta name="author" content="Ankita Khurana Anki Shanky ">
+    
+
     <title>Elista Overseas</title>
 
     <!-- Bootstrap -->
