--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
 			<div class="col-md-7  wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
 				<img src="images/about_pic1.jpg" class="img-responsive">
 				<h4></h4>
-				<p>Elista Overseas has originated its roots from <b>Ram Shoes. Co</b> Ram Shoes Co. has a legendary heritage of carrying and nurturing the Footwear Wholesale & Retail  business for over 50 Years under able leadership of Shri Ram Lal Dora . In order to peruse diversified business horizons, Mr Sachin Dora , Mrs Geetanjali Arora & Ms Ankita Khurana has taken the leap forward to build a progressive and dedicated professionally run organization as elista Overseas for the manufacturing & Exporting of Women's Footwear</p>
+				<p>Elista Overseas has originated its roots from <b>Ram Shoes. Co</b> Ram Shoes Co. has a legendary heritage of carrying and nurturing the Footwear Wholesale & Retail  business for over 50 Years under able leadership of Shri Ram Lal Dora. In order to pursue diversified business horizons, Mr Sachin Dora , Mrs Geetanjali Arora & Ms Ankita Khurana has taken the leap forward to build a progressive and dedicated professionally run organization as elista Overseas for the manufacturing & Exporting of Women's Footwear</p>
 				<p>Elista Overseas established in 2017 as a forward integration plan focused with a large interest of catering and providing best valued complete Woman footwears.Since Inception Elista Overseas is expanding horizons with newer product lines in Women's footwears
 Elista Overseas is one of the most quality conscious, progressive footwear company  owning its flagship brand  “Elista“ 	&reg;
  </p>
