--- a/about.html
+++ b/about.html
@@ -175,19 +175,20 @@ Company  have A Long Term Mission Of Becoming The Most Desirable And Sustainable
 	<div class="our-team" id="team">
 		<div class="container">
 			<h3>Our Team</h3>	
-			<div class="text-center">
-				<div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
-					<img src="images/services/jk.jpg" alt="" >
-					<h4>JK Khurana</h4>
-					<p></p>
-				</div>
+			<div class="text-center row">
+				
 				<div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
-					<img src="images/services/jk.jpg" alt="" >
+					<img src="images/services/v4.jpg" alt="" >
 					<h4>Vikas Arora</h4>
 					<p></p>
 				</div>
+				<div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
+					<img src="images/services/jk2.jpg" alt="" >
+					<h4>JK Khurana</h4>
+					<p></p>
+				</div>
 				<div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="900ms">
-					<img src="images/services/sd.jpg" alt="" >
+					<img src="images/services/sd2.jpg" alt="" >
 					<h4>Sachin Dora</h4>
 					<p></p>
 				</div>
