--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
        
   <meta name="description" content="Elista Overseas Shoes Footwear Flat heel pencil monk lace up sandal sporty ankle boot slip on belli bellirius high heels Export Retail Buy Sell Company India ">
-  <meta name="keywords" content="Elista Overseas Shoes Footwear Flat heel pencil monk lace up sandal sporty ankle boot slip on belli bellirius high heels Export Retail Buy Sell Company India ">
+   
+  <meta name="keywords" content="Elista,,Overseas , Shoes , Footwear ,Flat, heel, pencil, monk ,lace up, sandal ,sporty, ankle, boot, slip on ,belli, bellirius, high heels ,Export ,Retail, Buy, Sell, Company ,India ">
   <meta name="author" content="Ankita Khurana Anki Shanky ">
     
 
