--- a/product.html
+++ b/product.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
        
-  <meta name="description" content="Elista Overseas Shoes Footwear Flat heel pencil monk lace up sandal sporty ankle boot slip on belli bellirius high heels Export Retail Buy Sell Company India ">
+  <meta name="description" content="
+Elista Overseas offers various varieties of Indian Footwear , which are well designed and packed through latest state of art to maintain highest international standards & actively involved in Whole Sale Operations / Retail Operations & Export Operations
+
+  Elista Overseas Shoes Footwear Flat heel pencil monk lace up sandal sporty ankle boot slip on belli bellirius high heels Export Retail Buy Sell Company India ">
    
   <meta name="keywords" content="Elista,,Overseas , Shoes , Footwear ,Flat, heel, pencil, monk ,lace up, sandal ,sporty, ankle, boot, slip on ,belli, bellirius, high heels ,Export ,Retail, Buy, Sell, Company ,India ">
   <meta name="author" content="Ankita Khurana Anki Shanky ">
