--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ Elista Overseas offers various varieties of Indian Footwear , which are well des
                             <div class="col-sm-6">
                                 <div class="carousel-content">
                                     <h2 class="animation animated-item-1">Elista<span>Overseas</span></h2>
-                                    <p class="animation animated-item-2">Walk With Fashion</p>
+                                    <p class="animation animated-item-2" style="font-family:'Monotype Corsiva','Apple Chancery','ITC Zapf Chancery','URW Chancery L',cursive;"><i>Walk With Fashion</i></p>
                                     <a class="btn-slide animation animated-item-3" id="sli" href="#ab">Read More</a>
                                 </div>
                             </div>
@@ -167,20 +167,18 @@ The Footwear product mix Gents 55%, Ladies 35% and Children 10%.
  </p>
  
 				<p>
-The Leather Industry holds a prominent place in the Indian economy. This sector is known for its consistency in high export earnings and it is among the top ten foreign exchange earners for the country.
+The Footwear Industry holds a prominent place in the Indian economy. This sector is known for its consistency in high export earnings and it is among the top ten foreign exchange earners for the country.
 				</p>
-				<p>The Leather industry is bestowed with an affluence of raw materials as India is endowed with 21% of world cattle & buffalo and 11% of world goat & sheep population. Added to this are the strengths of skilled manpower, innovative technology, increasing industry compliance to international environmental standards, and the dedicated support of the allied industries.
-				</p>
-
+				
 				<p>In the largest variety of Footwear manufactured by the country Woman  Footwear , because of its typical Designs / Quality , Indian Footwear has made its niche in the international markets 
 
 				</p>
 
-				<p>Given the assurance of highest quality, following the international standards, the Footwear manufacturer  in India Viz: Elista OVERSEAS PVT. LTD. have earned a prestigious place in Indian Footwear  Industry
+				<p>Given the assurance of highest quality, following the international standards, the Footwear manufacturer  in India Viz: ELISTA OVERSEAS have earned a prestigious place in Indian Footwear  Industry
 
 				 </p>
 				 <p>
-				 	<b>“ELISTA OVERSEAS ”</b>, having a legendary heritage of carrying and nurturing the Footwear  business takes this opportunity to introduce itself as one of the most reliable manufacturer and exporter of various varieties of Women's Footwear  from India
+				 	<b>“ELISTA OVERSEAS”</b>, having a legendary heritage of carrying and nurturing the Footwear  business takes this opportunity to introduce itself as one of the most reliable manufacturer and exporter of various varieties of Women's Footwear  from India
 
 				 </p>
 			</div>
