--- a/about.html
+++ b/about.html
@@ -82,11 +82,11 @@ Elista Overseas offers various varieties of Indian Footwear , which are well des
 			<div class="col-md-7  wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
 				<img src="images/about_pic1.jpg" class="img-responsive">
 				<h4></h4>
-				<p>Elista Overseas has originated its roots from <b>Ram Shoes. Co</b> Ram Shoes Co. has a legendary heritage of carrying and nurturing the Footwear Wholesale & Retail  business for over 50 Years under able leadership of Shri Ram Lal Dora. In order to pursue diversified business horizons, Mr Sachin Dora , Mrs Geetanjali Arora & Ms Ankita Khurana has taken the leap forward to build a progressive and dedicated professionally run organization as elista Overseas for the manufacturing & Exporting of Women's Footwear</p>
+				<p style="text-align:justify;">Elista Overseas has originated its roots from <b>Ram Shoes. Co.</b> Ram Shoes Co. has a legendary heritage of carrying and nurturing the Footwear Wholesale & Retail  business for over 50 Years under able leadership of Shri Ram Lal Dora. In order to pursue diversified business horizons, <b>Mr Sachin Dora , Mrs Geetanjali Arora & Ms Ankita Khurana </b>has taken the leap forward to build a progressive and dedicated professionally run organization as elista Overseas for the manufacturing & Exporting of Women's Footwear</p>
 				<p>Elista Overseas established in 2017 as a forward integration plan focused with a large interest of catering and providing best valued complete Woman footwears.Since Inception Elista Overseas is expanding horizons with newer product lines in Women's footwears
-Elista Overseas is one of the most quality conscious, progressive footwear company  owning its flagship brand  “Elista“ 	&reg;
+Elista Overseas is one of the most quality conscious, progressive footwear company  owning its flagship brand  <b>Elista	&reg;</b>
  </p>
- <p>
+ <p style="text-align:justify;">
 					Elista offers various varieties of Indian Footwear , which are well designed and packed through latest state of art to maintain highest international standards & actively involved in Whole Sale Operations / Retail Operations & Export Operations
 				</p>
 				<p>
@@ -193,7 +193,7 @@ Company  have A Long Term Mission Of Becoming The Most Desirable And Sustainable
 An enthusiastic personality is a Commerce Post Graduate with a IIFT Merit certificate holder, with more than 20 years of rich Sales & Marketing exposure in the field of International business development of Branded & OEM / Pvt. Label Products in International markets Viz: Africa, Asia Pacific,CIS, East Asia, Europe,Middle East, North America & South Asia is a great asset to Elista Overseas
 </p>
 <p style="text-align : left ; margin-top:10px; margin-left:0px;">
-Under his rich experience, knowledge, skills & abilities in the area of Imports-Exports- “Elista Overseas” will reach to its New heights
+Under his rich experience, knowledge, skills & abilities in the area of International business  “Elista Overseas” will reach to its New heights
 
 
 </pre>
