--- a/product.html
+++ b/product.html
@@ -773,6 +773,17 @@ We manufacture
 }">ES24</p>
 
 </div>
+<div class="style_prevu_kit" style="background-color:#ffffff;">
+    
+<img src="Catalog/Sandal/25.jpg" style=" width:196px;
+    height:210px; margin:2px;">
+    <p style="color: #ff0808;
+    font-size: large;
+    font-weight: bold;
+    background-color: white;
+}">ES25</p>
+
+</div>
 
 
 <center style=" background-color: #1bbd36; ">
