--- a/about.html
+++ b/about.html
@@ -394,7 +394,7 @@ Under his rich experience, knowledge, skills & abilities in the area of Internat
 				<div class="social-icon">
 					<div class="col-md-4">
 						<ul class="social-network">
-							<li><a href="https://www.facebook.com/jitendra.khurana.71" class="fb tool-tip" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+							<li><a href="https://www.facebook.com/elistaoverseas" class="fb tool-tip" title="Facebook"><i class="fa fa-facebook"></i></a></li>
 							
 							<li><a href="https://plus.google.com/106867079031709530877" class="gplus tool-tip" title="Google Plus"><i class="fa fa-google-plus"></i></a></li>
 							<li><a href="https://www.linkedin.com/in/jk-khurana-1310a354/" class="linkedin tool-tip" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
