--- a/contact.html
+++ b/contact.html
@@ -94,7 +94,7 @@ Elista Overseas offers various varieties of Indian Footwear , which are well des
  </center>
 
 
-<p>Call Us At : 9811911721 | Email Us at : elistaoverseas@gmail.com</p>
+<p> Email Us at : elistaoverseas@gmail.com</p>
 
 
             </div><!--/.row-->
@@ -113,7 +113,7 @@ Elista Overseas offers various varieties of Indian Footwear , which are well des
                 <div class="social-icon">
                     <div class="col-md-4">
                         <ul class="social-network">
-                            <li><a href="https://www.facebook.com/jitendra.khurana.71" class="fb tool-tip" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="https://www.facebook.com/elistaoverseas" class="fb tool-tip" title="Facebook"><i class="fa fa-facebook"></i></a></li>
                             
                             <li><a href="https://plus.google.com/106867079031709530877" class="gplus tool-tip" title="Google Plus"><i class="fa fa-google-plus"></i></a></li>
                             <li><a href="https://www.linkedin.com/in/jk-khurana-1310a354/" class="linkedin tool-tip" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
