--- a/about.html
+++ b/about.html
@@ -343,7 +343,7 @@ Company  have A Long Term Mission Of Becoming The Most Desirable And Sustainable
 					<h4>JK Khurana</h4>
 <p style="text-align : left ;margin: 0px; */">
 
-An enthusiastic personality is a Commerce Post Graduate with a IIFT Merit certificate holder, with more than 20 years of rich Sales & Marketing exposure in the field of International business development of Branded & OEM / Pvt. Label Products in International markets Viz: Africa, Asia Pacific,CIS, East Asia, Europe,Middle East, North America & South Asia
+An enthusiastic personality is a Commerce Post Graduate with a IIFT Merit certificate holder,having more than 20 years of rich Sales & Marketing exposure in the field of International business development of Branded & OEM / Pvt. Label Products in International markets Viz: Africa, Asia Pacific,CIS, East Asia, Europe,Middle East, North America & South Asia
 </p>
 <p style="text-align : left ; margin-top:10px; margin-left:0px;">
 Under his rich experience, knowledge, skills & abilities in the area of International business  “Elista Overseas” will reach to its New heights
