--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@ Elista Overseas offers various varieties of Indian Footwear , which are well des
   Elista Overseas Shoes Footwear Flat heel pencil monk lace up sandal sporty ankle boot slip on belli bellirius high heels Export Retail Buy Sell Company India ">
   <meta name="keywords" content="Elista,,Overseas , Shoes , Footwear ,Flat, heel, pencil, monk ,lace up, sandal ,sporty, ankle, boot, slip on ,belli, bellirius, high heels ,Export ,Retail, Buy, Sell, Company ,India ">
 
-  <meta name="author" content="Ankita Khurana Anki Shanky ">
+  <meta name="author" content="Ankita  Anki Shanky ">
     
 
     <title>Elista Overseas</title>
@@ -198,7 +198,7 @@ Elista Overseas offers various varieties of Indian Footwear , which are well des
 			<div class="col-md-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
 				<img src="images/about_pic1.jpg" class="img-responsive">
 				<h4></h4>
-				<p style="text-align:justify;">Elista Overseas has originated its roots from <b>Ram Shoes. Co.</b> Ram Shoes Co. has a legendary heritage of carrying and nurturing the Footwear Wholesale & Retail  business for over 50 Years under able leadership of Shri Ram Lal Dora. In order to pursue diversified business horizons, <b>Mr Sachin Dora , Mrs Geetanjali Arora & Ms Ankita Khurana </b>has taken the leap forward to build a progressive and dedicated professionally run organization as elista Overseas for the manufacturing & Exporting of Women's Footwear</p>
+				<p style="text-align:justify;">Elista Overseas has originated its roots from <b>Ram Shoes. Co.</b> Ram Shoes Co. has a legendary heritage of carrying and nurturing the Footwear Wholesale & Retail  business for over 50 Years under able leadership of Shri Ram Lal Dora. In order to pursue diversified business horizons, <b>Mr Sachin Dora , Mrs Geetanjali Arora & Ms Ankita  </b>has taken the leap forward to build a progressive and dedicated professionally run organization as elista Overseas for the manufacturing & Exporting of Women's Footwear</p>
 				<p>Elista Overseas established in 2017 as a forward integration plan focused with a large interest of catering and providing best valued complete Woman footwears.Since Inception Elista Overseas is expanding horizons with newer product lines in Women's footwears
 Elista Overseas is one of the most quality conscious, progressive footwear company  owning its flagship brand  <b>Elista	&reg;</b>
  </p>
@@ -341,6 +341,7 @@ Company  have A Long Term Mission Of Becoming The Most Desirable And Sustainable
 				<div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
 					<img src="images/services/jk2.jpg" alt="" >
 					<h4>JK Khurana</h4>
+                    <p>Business Head </p>
 <p style="text-align : left ;margin: 0px; */">
 
 An enthusiastic personality is a Commerce Post Graduate with a IIFT Merit certificate holder,having more than 20 years of rich Sales & Marketing exposure in the field of International business development of Branded & OEM / Pvt. Label Products in International markets Viz: Africa, Asia Pacific,CIS, East Asia, Europe,Middle East, North America & South Asia
